--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -49,7 +49,7 @@ block content
                             +e.text 8 (863) 303-38-33
                     +b.maps
                         +e.icon 
-                        +e.text Ростов-на-дону <br>ул.Текучева, 23, эт. 3
+                        +e.text Ростов-на-Дону <br>ул.Текучева, 23, эт. 3
     +b.menu
         .container
             +e.item
