--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -53,7 +53,7 @@ block content
     +b.menu
         .container
             +e.item
-                //img(src="images/building.svg" height="25px")
+                img(src="images/building.svg" height="25px")
                 +e({tag: 'a'}).link Проектирование<br>и строительство
                 +e.submenu
                     +e.item
@@ -87,8 +87,8 @@ block content
 
 
             +e.item
-                //img(src="images/pipes.svg" height="25px")
-                +e({tag: 'a'}).link Инженерные сети<br>“под ключ”
+                img(src="images/pipes.svg" height="25px")
+                +e({tag: 'a'}).link Инженерные сети<br>“ПОД КЛЮЧ”
                 +e.submenu
                     +e.item
                         +e({tag: 'a'}).link.menu__link_title Под ключ
@@ -124,16 +124,16 @@ block content
 
 
             +e.item
-                //img(src="images/geodesy.svg" height="28px")
-                +e({tag: 'a'}).link Геодезия,<br>кадастровые работы
+                img(src="images/geodesy.svg" height="28px")
+                +e({tag: 'a'}).link Геодезия, геология,<br>кадастровые работы
             +e.item
-                //img(src="images/lawyer.svg" height="25px")
+                img(src="images/lawyer.svg" height="25px")
                 +e({tag: 'a'}).link Юридическое<br>сопровождение
             +e.item
-                //img(src="images/design.svg" height="23px")
-                +e({tag: 'a'}).link Дизайн<br>интерьера/экстерьера
+                img(src="images/design.svg" height="23px")
+                +e({tag: 'a'}).link Дизайн-проект<br>интерьера/экстерьера
             +e.item
-                //img(src="images/gnb.svg" height="22px")
+                img(src="images/gnb.svg" height="22px")
                 +e({tag: 'a'}).link Бестраншейные<br>технологии
     .nav
         //- .nav__header
