--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -26,12 +26,12 @@
     box-shadow:0px 2px 6.96px 1.04px rgba(18, 16, 11, 0.08)
     height auto
     z-index 100
-    padding 20px 0
+    //padding 20px 0
     &__wrapper
         min-height 59px
         height auto
         // display flex
-        align-items center
+        //align-items center
         justify-content space-between
         row-flex()
         //margin auto
@@ -40,13 +40,25 @@
     &__right
         col()
     &__left
-        size(4)
-    &__center
+        // display flex
+        // align-items center
+        // justify-content center
         size(6)
-        
+        @media (min-width 1160px)
+            size(3)
+        margin auto 0
+        padding 20px 0
+    &__center
+        display none
+        background #f5f5f5 linear-gradient(to right, #eaeaea 0%,#f5f5f5 50%,#eaeaea 100%)
+        @media (min-width 1160px)
+            size(7)
+            display block
     &__right
-        size(2)
-
+        width max-content 
+        @media (min-width 1160px)
+            size(2)
+        margin auto 0
         // flex-grow 1
         // display flex
         // justify-content flex-end
@@ -56,6 +68,9 @@
 .menu
     background #2b519e
     z-index 120
+    display none
+    @media (min-width 1160px)
+        display block
     .container
         display flex
     &__item
@@ -141,9 +156,29 @@
     height 100%
     display none
     //justify-content center
-    @media (min-width 1160px)
-        display flex
-        align-items center
+    display flex
+    align-items center
+    justify-content center
+    position relative
+    &__wrapper
+        position absolute
+        width 100%
+        height 100%
+        overflow hidden
+        &:before
+        &:after
+            content ''
+            position absolute
+            background #fff
+            height 80px
+            width 300px
+            top 0
+            transform rotate(-65deg)
+        &:before
+            right calc(100% - 140px)
+        &:after
+            left calc(100% - 130px)
+
     &__item
         display inline-block
         margin 0 10px
@@ -282,7 +317,7 @@
         font-weight 500
 
 .phone
-    display inline-block
+    display block
     &__wrap
         display flex
         align-items center
@@ -319,9 +354,13 @@
     display none
     margin-top 5px
     @media (min-width 390px)
+        // display flex
+        // //justify-content flex-end
+        // //justify-content center
+        // align-items center
+        display block
+    &__wrap
         display flex
-        //justify-content flex-end
-        //justify-content center
         align-items center
     &__icon
         width 23px
