--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -123,6 +123,11 @@ block content
                         +e({tag: 'a'}).link Система водоотведения
                         +e({tag: 'a'}).link Система электроснабжения
                         +e({tag: 'a'}).link Система газификации
+                        //e.item
+                        +e({tag: 'a'}).link.menu__link_title Автономные системы 
+                        +e({tag: 'a'}).link Cептики, ЛОС
+                        +e({tag: 'a'}).link Газголдеры
+
 
 
             +e.item
@@ -164,11 +169,18 @@ block content
                 +e.submenu
                     +e.item
                         +e({tag: 'a'}).link.menu__link_title По земельным участкам
+                        +e({tag: 'a'}).link Подбор земельного участка
+                        +e({tag: 'a'}).link Узаконивание земельного участк
                     +e.item
                         +e({tag: 'a'}).link.menu__link_title По инженерным коммуникациям
+                        +e({tag: 'a'}).link Получение разрешения на строительство
+                        +e({tag: 'a'}).link Узаконивание строительства
+                        +e({tag: 'a'}).link Получения права собственности<br>на объект недвижимости
 
                     +e.item
                         +e({tag: 'a'}).link.menu__link_title По объектам недвижимости
+                        +e({tag: 'a'}).link Консультация
+                        +e({tag: 'a'}).link Узаконивание инженерных сетей
             +e.item
                 img(src="images/design.svg" height="23px")
                 +e({tag: 'a'}).link Дизайн-проект<br>интерьера/экстерьера
