--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -40,14 +40,14 @@
     &__right
         col()
     &__left
-        // display flex
-        // align-items center
-        // justify-content center
-        size(6)
+        display flex
+        align-items center
+        width calc(100% - 200px) 
         @media (min-width 1160px)
             size(3)
         margin auto 0
-        padding 20px 0
+        @media (min-width 390px)
+            padding 20px 0
     &__center
         display none
         background #f5f5f5 linear-gradient(to right, #eaeaea 0%,#f5f5f5 50%,#eaeaea 100%)
@@ -130,7 +130,7 @@
         background #fff
         border 1px solid  rgb(232, 232, 232)
         box-shadow 0px 10px 15px 0px rgba(0, 0, 0, 0.14);
-        padding 20px 0 20px 0 
+        padding 0 0 20px 0 
         .menu__item
             padding 0
             margin 0
@@ -149,7 +149,7 @@
             &_title
                 font-size 16px
                 font-weight 600
-                margin-bottom 10px
+                margin 20px 0 5px 0
             
 .top-menu
     width 100%
@@ -269,6 +269,8 @@
     width 24px
     height 16px
     position relative
+    @media (min-width 390px)
+        margin-right 20px
     &__plank
         position absolute
         width 100%
@@ -294,6 +296,7 @@
                 top 7px
                 transform rotate(45deg)
 .logo
+    width 100%
     &__image
         margin 0 20px
         width 50px
@@ -309,6 +312,9 @@
         margin-right 15px
         float left
     &__description
+        display none
+        @media (min-width 530px)
+            display block
         width 100%
         font-size 16px
         color #000
