--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -11,7 +11,7 @@
 
 .container
     padding 0 20px
-    @media (min-width 1160px)
+    @media (min-width 1200px)
         padding 0
     max-width 1160px
     margin auto
@@ -19,14 +19,16 @@
 
 
 .header
-    // position fixed
-    // top 0px
+    position fixed
+    top 0px
     width 100%
     background #fff
-    box-shadow:0px 2px 6.96px 1.04px rgba(18, 16, 11, 0.08)
+    box-shadow 0px 2px 6.96px 1.04px rgba(18, 16, 11, 0.08)
     height auto
     z-index 100
     //padding 20px 0
+    @media (min-width 1160px)
+        position relative
     &__wrapper
         min-height 59px
         height auto
@@ -42,9 +44,10 @@
     &__left
         display flex
         align-items center
-        width calc(100% - 200px) 
+        //width calc(100% - 200px)
+        flex-grow 1
         @media (min-width 1160px)
-            size(3)
+            size(2)
         margin auto 0
         @media (min-width 390px)
             padding 20px 0
@@ -78,7 +81,7 @@
         // margin 0 10px
         position relative
         // padding 8px 15px 8px 8px
-        padding 8px 20px 8px 15px
+        padding 8px 15px 8px 10px
         background #2b519e
         border-left 1px solid rgba(255, 255, 255, .08)
         &:last-child
@@ -296,7 +299,8 @@
                 top 7px
                 transform rotate(45deg)
 .logo
-    width 100%
+    // width 100%
+    flex-grow 1
     &__image
         margin 0 20px
         width 50px
@@ -535,8 +539,6 @@ ul.list
                 list-style-type none
                 background  url(../images/list-item-check.svg) left top no-repeat
                 background-size 1.62em 
-
-
 
 .breadcrumbs
     width 100%
