--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -390,13 +390,17 @@
 .offer
     width 100%
     height 400px
-    background #7886ef
+    background #7886ef url(../images/offer.jpg) center no-repeat
+    background-size cover
+    box-shadow inset 0px 4px 20px 0px rgba(0, 0, 0, 0.2)
     &__wrapper
         display flex
         align-items center
         justify-content center
         flex-direction column
         height 100%
+        @media (min-width 500px)
+            align-items flex-start
     &__title
         font-size 24px
         line-height 1.2em
@@ -404,6 +408,8 @@
         font-weight 700
         margin-bottom 20px
         text-shadow 0px 0px 10px rgba(60, 60, 60, 0.4)
+        @media (min-width 700px)
+            font-size 37px
     &__description
         font-size 20px
         line-height 1.2em
@@ -411,6 +417,8 @@
         font-weight 300
         margin-bottom 40px
         text-shadow 0px 0px 10px rgba(60, 60, 60, 0.3)
+        @media (min-width 700px)
+            font-size 30px
     // &__btn
     //     //width 100%
 .btn
@@ -469,7 +477,7 @@
                 .btn__text
                     color #fff
         &_light
-            background rgba(0, 0, 0, 0.2)
+            background rgba(0, 0, 0, 0.1)
             border 2px solid #fff
             .btn__text
                 color #fff
@@ -912,6 +920,8 @@ ul.list
         font-size 16px 
         font-weight 600
         margin-bottom 20px
+        @media (min-width 700px)
+            font-size 20px
     &__text
         font-size 14px
         line-height 1.45em
@@ -919,7 +929,8 @@ ul.list
         text-align left
         position relative
         @media (min-width 700px)
-            padding 20px 70px 
+            padding 20px 70px
+            font-size 16px 
             &:before
             &:after
                 content ''
